# CAXpert

./: .gitignore  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  LICENSE  Makefile  README.rst  pyproject.toml  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
examples/: inf_dp.py  inf_val.py  launch_jobs.py  ml_training_db.py  run_inf.py  run_inf_dp.py  start_dfts.py  structure_enumeration.py  test.ipynb
examples/ft/: config.yml
examples/fw_configs/: array_qadapter.yaml  my_fworker.yaml  my_qadapter.yaml  my_qadapter_gpu.yaml  slurm_arr_jobs.txt
src/caxpert/: cli.py
src/core/: __init__.py
src/tasks/: drawstructures.py  gen_str.py  inference.py  make_db.py  run_dft.py
src/utils/: error.py  utils.py
tests/: __init__.py  test_caxpert.py
