[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "caxpert"
version = "0.1.0"
description = "This package predicts the ground states at different coverages for adsorption system by finetuning OCP models"
readme = "README.rst"
authors = [
  {name = "Chao Xu", email = "xu.chao@northeastern.edu"}
]
maintainers = [
  {name = "Chao Xu", email = "xu.chao@northeastern.edu"}
]
classifiers = [

]
license = {text = "MIT license"}
dependencies = [
  "typer"
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/12Chao/caxpert/issues"
changelog = "https://github.com/12Chao/caxpert/blob/master/changelog.md"
homepage = "https://github.com/12Chao/caxpert"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

